# ext2

./: Cargo.toml  basic.ext2
data/: test_pattern.txt
examples/: bincode.rs  copytodisk.rs  image.rs
src/: array.rs  disk.rs  handle.rs  lib.rs
tests/: test_basic.rs  test_home.rs
